--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ celerybeat-schedule
 .venv
 env/
 venv/
+virtualenv/
 ENV/
 env.bak/
 venv.bak/
@@ -106,3 +107,4 @@ venv.bak/
 # intellij IDE
 .idea/
 *.iml
+.vscode/
