--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,13 @@ jobs:
     - run: sudo chown -R circleci:circleci /usr/local/bin
     - run: sudo chown -R circleci:circleci /usr/local/lib/python3.7.2/site-packages
     - restore_cache:  # ensure this step occurs *before* installing dependencies
-        key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+        key: base-python-project-{{ checksum "Pipfile.lock" }}
     - run:
         command: |  # use pipenv to install dependencies
           sudo pip install pipenv
           pipenv install
     - save_cache:
-        key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+        key: base-python-project-{{ checksum "Pipfile.lock" }}
         paths:
           - ".venv"
           - "/usr/local/bin"
